--- a/analysis.html
+++ b/analysis.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: rgba(0, 0, 0, 0.8); 
+            background: rgba(0, 0, 0, 0.8);
             color: #fff;
             margin: 0;
             padding: 0;
@@ -28,16 +28,17 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
+            flex-wrap: wrap;  /* Allows items to wrap */
             width: 100%;
             max-width: 1000px;
-            height: 80vh;
+            height: auto;  /* Adjusted to make height flexible */
         }
 
         .skill {
             font-size: 2rem;
             font-weight: bold;
             padding: 20px;
-            margin: 0 20px;
+            margin: 10px;
             background: linear-gradient(135deg, #f6d365, #fda085);
             color: white;
             border-radius: 10px;
@@ -46,6 +47,7 @@
             opacity: 0;
             animation: fadeInSkills 2s ease-in-out forwards;
             transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            width: 200px;  /* Fixed width for each skill */
         }
 
         .skill:nth-child(1) {
@@ -89,6 +91,31 @@
             100% {
                 opacity: 1;
                 transform: translateY(0);
+            }
+        }
+
+        /* Media Queries for responsiveness */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2rem; /* Smaller heading on mobile */
+            }
+
+            .skill {
+                font-size: 1.5rem; /* Smaller skill text on mobile */
+                width: 45%; /* Two skills per row on mobile */
+                margin: 10px;
+            }
+
+            .container {
+                justify-content: center;
+                height: auto; /* Adjust height for smaller screen */
+            }
+        }
+
+        @media (max-width: 480px) {
+            .skill {
+                font-size: 1.2rem; /* Even smaller text on very small screens */
+                width: 90%; /* One skill per row on very small screens */
             }
         }
     </style>
