--- a/about.html
+++ b/about.html
@@ -3,165 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <link rel="stylesheet" href="style.css">
+    <title>About Me </title>
     <style>
         * {
-            box-sizing: border-box;
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+            font-family: "Poppins", sans-serif;
         }
+
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f4f4f4;
             color: #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: auto;
-            overflow-x: hidden;
-            scroll-behavior: smooth;
+            line-height: 1.6;
         }
-        header {
-            background-color: #2c3e50;
-            color: white;
-            padding: 30px 20px;
-            width: auto;
-            max-width: 1200px;
+
+        /* Hero Section */
+        .hero {
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+                        url('https://img.freepik.com/free-photo/technology-digital-business-concept-ai-graphic-interface_53876-129703.jpg');
+            background-size: cover;
+            background-position: center;
             text-align: center;
-            border-radius: 8px;
-            animation: fadeInUp 1.5s ease-in-out;
+            color: white;
+            padding: 100px 20px;
         }
-        header h1 {
-            font-size: 2.5rem;
-            animation: slideIn 1s ease-in-out;
+
+        .hero h1 {
+            font-size: 2.8rem;
+            margin-bottom: 10px;
         }
-        section {
+
+        .hero p {
+            font-size: 1.2rem;
+            max-width: 700px;
+            margin: 0 auto;
+            opacity: 0.9;
+        }
+
+        /* About Section */
+        .about-container {
+            max-width: 1100px;
+            margin: 40px auto;
             padding: 20px;
-            margin: 20px;
-            background-color: #333;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-            width: auto;
-            max-width: 1200px;
-            border-radius: 8px;
-            overflow-y: auto;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .about-content {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .about-image img {
+            width: 300px;
             height: auto;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeInSection 1.5s ease-out forwards;
+            border-radius: 10px;
         }
-        section h2 {
-            color: #2c3e50;
-            margin-bottom: 15px;
-            font-size: 1.8rem;
-            animation: fadeInLeft 1s ease-out;
+
+        .about-text {
+            flex: 1;
         }
-        section ul {
-            list-style-type: disc;
-            margin-left: 20px;
+
+        .about-text h2 {
+            font-size: 2rem;
+            margin-bottom: 10px;
+            color: #222;
+        }
+
+        .about-text p {
             font-size: 1rem;
-            animation: fadeInUp 1.2s ease-in-out;
+            color: #444;
+            margin-bottom: 15px;
         }
-        footer {
-            background-color: #2c3e50;
+
+        .about-text .skills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .skills span {
+            background: #ff5722;
             color: white;
-            text-align: center;
-            padding: 10px;
-            width: 100%;
-            max-width: 1200px;
-            margin-top: 20px;
-            border-radius: 8px;
+            padding: 8px 14px;
+            border-radius: 6px;
+            font-size: 0.9rem;
+            font-weight: bold;
         }
 
-        /* Keyframes for animations */
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .about-content {
+                flex-direction: column;
+                text-align: center;
             }
-            to {
-                opacity: 1;
-                transform: translateY(0);
+
+            .about-image img {
+                width: 80%;
             }
         }
-
-        @keyframes fadeInLeft {
-            from {
-                opacity: 0;
-                transform: translateX(-20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-
-        @keyframes fadeInSection {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes slideIn {
-            from {
-                transform: translateY(-50px);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
     </style>
 </head>
 <body>
 
-<header>
-    <h1>About Me</h1>
-</header>
+    <section class="hero">
+        <h1>About Me</h1>
+        <p>Hi, I’m Samuel AKINGENEYE! A passionate full-stack web developer and environmental health scientist dedicated to building software that makes an impact.</p>
+    </section>
 
-<section>
-    <h2>Introduction</h2>
-    <p>Hi, I’m <strong>Samuel AKINGENEYE</strong>, a passionate programmer and environmental health scientist. I’m eager to find a position where I can combine my technical expertise in programming and my knowledge in public health to make a real difference. My goal is to contribute to both the tech and health sectors with innovative solutions that address pressing issues.</p>
-
-    <h2>My Journey</h2>
-    <p>My journey began with a deep interest in technology and problem-solving. I found it fascinating how software can provide real-world solutions, which led me to study programming. At the same time, my passion for public health and the environment made me pursue a degree in Environmental Health Sciences. I realized that the two fields intersect in powerful ways, and by blending my tech skills with my understanding of environmental health, I can contribute significantly to improving the quality of life for individuals and communities.</p>
-
-    <h2>Skills & Expertise</h2>
-    <ul>
-        <li><strong>Coding Skills</strong>: Proficient in HTML, CSS, JavaScript, and back-end technologies. I have built dynamic websites, including a clock, weather app, and calculator, and am currently working on developing a mobile app.</li>
-        <li><strong>One Health Skills</strong>: Knowledge of environmental health risks, public health research, epidemiology, and communication strategies that tie into both human and environmental health.</li>
-        <li><strong>Communication Skills</strong>: Experienced in presenting technical data in understandable terms to various audiences, as well as writing detailed reports and research papers.</li>
-        <li><strong>Epidemiology</strong>: A deep understanding of the links between environmental factors and health, using data and research to identify and address health risks in communities.</li>
-    </ul>
-
-    <h2>Current Focus</h2>
-    <p>I’m currently working on personal projects in both web development and environmental health. While I continue to develop my skills through these projects, I am also ready and eager to take on freelance work where I can apply my expertise to help clients solve real-world problems.</p>
-
-    <h2>Personal Aspirations</h2>
-    <p>My career goal is to find a position that allows me to utilize both my technical and medical skills. I aspire to work on projects that contribute to the intersection of health and technology, helping to solve issues related to environmental health and public health.</p>
-
-    <h2>Hobbies & Interests</h2>
-    <ul>
-        <li>Reading books</li>
-        <li>Watching movies and tutorials</li>
-        <li>Travelling in my free time</li>
-        <li>Volunteering for various causes</li>
-        <li>Singing</li>
-    </ul>
-
-</section>
-
-<footer>
-    <p>&copy; 2025 Samuel AKINGENEYE. All Rights Reserved.</p>
-</footer>
+    <section class="about-container">
+        <div class="about-content">
+            <div class="about-image">
+                <img src="My image.jpeg" alt="Fresh Talent">
+            </div>
+            <div class="about-text">
+                <h2>Who Am I?</h2>
+                <p>I am a self-taught full-stack web developer with a strong foundation in cybersecurity and data analysis. Combining my background in environmental health sciences with tech, I create solutions that address real-world challenges.</p>
+                <p>From web applications to cybersecurity solutions, my goal is to build impactful software that bridges the gap between technology and health sciences.</p>
+                <div class="skills">
+                    <span>Full-Stack Development</span>
+                    <span>Cybersecurity</span>
+                    <span>Data Analysis</span>
+                    <span>UI/UX Design</span>
+                    <span>Consulting & Tech Support</span>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
