--- a/contact.html
+++ b/contact.html
@@ -1,235 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contacts</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact me</title>
+    <!-- FontAwesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-      body {
-        font-family: sans-serif;
-        padding: 20px;
-        margin: 0;
-        background-color: #092415;
-        animation: fadeIn 2s ease-in-out;
-        overflow-x: hidden;
-      }
-
-      h1 {
-        font-size: 40px;
-        margin-top: 0;
-        margin-bottom: 15px;
-        animation: slideIn 1s ease-out;
-        color: #333;
-      }
-
-      h2 {
-        font-size: 30px;
-        animation: slideIn 1s ease-out;
-        color: #555;
-      }
-
-      .established {
-        font-style: italic;
-        animation: fadeIn 3s ease-in-out;
-        text-align: center;
-        color: #777;
-      }
-
-      h1, h2, p {
-        text-align: center;
-      }
-
-      .contact {
-        width: 80%;
-        background-color: #463914;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 20px;
-        max-width: 600px;
-        border-radius: 10px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        animation: slideUp 1s ease-out;
-        transition: transform 0.3s ease;
-      }
-
-      .contact:hover {
-        transform: scale(1.05);
-      }
-
-      img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        animation: fadeIn 2s ease-in-out;
-      }
-
-      hr {
-        height: 2px;
-        background-color: brown;
-        border-color: brown;
-        margin-top: 20px;
-        margin-bottom: 20px;
-      }
-
-      .bottom-line {
-        margin-top: 25px;
-      }
-
-      h1, h2 {
-        font-family: 'Impact', serif;
-      }
-
-      .item p {
-        display: inline-block;
-        margin-top: 5px;
-        margin-bottom: 5px;
-        font-size: 18px;
-        font-weight: bold;
-        color: #333;
-      }
-
-      .flavor {
-        text-align: left;
-        width: 75%;
-        color: #777;
-      }
-
-      .price {
-        text-align: right;
-        width: 25%;
-        color: #6c757d;
-      }
-
-      footer {
-        font-size: 14px;
-        text-align: center;
-        margin-top: 30px;
-        animation: fadeIn 2s ease-in-out;
-      }
-
-      .address {
-        margin-bottom: 5px;
-      }
-
-      a {
-        color: color;
-        text-decoration: none;
-        font-weight: bold;
-      }
-
-      a:visited {
-        color: blue;
-      }
-
-      a:hover {
-        color: brown;
-        transition: color 0.3s ease;
-      }
-
-      a:active {
-        color: blue;
-      }
-
-      .fab {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background-color: #ff6347;
-        color: white;
-        border-radius: 50%;
-        padding: 15px;
-        font-size: 24px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-        cursor: pointer;
-        transition: transform 0.3s ease;
-      }
-
-      .fab:hover {
-        transform: scale(1.1);
-      }
-
-      /* Animations */
-      @keyframes fadeIn {
-        0% {
-          opacity: 0;
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
-        100% {
-          opacity: 1;
-        }
-      }
 
-      @keyframes slideIn {
-        0% {
-          transform: translateX(-100%);
+        body {
+          background-image: url(https://img.freepik.com/free-vector/abstract-black-lines-geometric-background_677411-2748.jpg?semt=ais_hybrid);
+            font-family: Arial, sans-serif;
+            background-color: #121212; /* Dark background */
+            color: #fff;
+            padding: 0;
+            margin: 0;
         }
-        100% {
-          transform: translateX(0);
-        }
-      }
 
-      @keyframes slideUp {
-        0% {
-          transform: translateY(50px);
-          opacity: 0;
+        /* Contact Section */
+        .contact-section {
+            padding: 50px 20px;
+            background-color: #1a1a1a;
+            text-align: center;
         }
-        100% {
-          transform: translateY(0);
-          opacity: 1;
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
         }
-      }
+
+        .section-title {
+            font-size: 36px;
+            font-weight: bold;
+            color: #3ec799;
+            margin-bottom: 20px;
+        }
+
+        .contact-text {
+            font-size: 18px;
+            color: #ddd;
+            margin-bottom: 30px;
+        }
+
+        .contact-links {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .contact-item {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            background-color: #2c2c2c;
+            padding: 15px 25px;
+            width: 100%;
+            max-width: 500px;
+            border-radius: 10px;
+            text-decoration: none;
+            color: #fff;
+            font-size: 18px;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        .contact-item:hover {
+            background-color: #FF6347;
+            transform: translateY(-5px);
+        }
+
+        .contact-item i {
+            font-size: 25px;
+            color: #4CAF50; /* Dark green */
+            transition: color 0.3s ease;
+        }
+
+        .contact-item:hover i {
+            color: #fff;
+        }
+
+        /* Contact Form */
+        .contact-form {
+            background-color: #2c2c2c;
+            padding: 30px;
+            margin-top: 40px;
+            border-radius: 10px;
+        }
+
+        .contact-form h3 {
+          color: #3ec799;
+            margin-bottom: 20px;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            display: block;
+            color: #fff;
+            font-size: 16px;
+            margin-bottom: 5px;
+        }
+
+        .form-group input, .form-group textarea {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            background: rgba(0, 0, 0, 0.8);
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .form-group textarea {
+            height: 120px;
+            resize: none;
+        }
+
+        .submit-btn {
+            background-color: green;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .submit-btn:hover {
+            background-color: #FF4500;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .section-title {
+                font-size: 28px;
+            }
+
+            .contact-text {
+                font-size: 16px;
+            }
+
+            .contact-item {
+                font-size: 16px;
+            }
+        }
     </style>
-  </head>
-  <body>
-    <div class="contact">
-      <main>
-        <h1>Contact Me</h1>
-        <p class="established">IT Fresh Talent</p>
-        <hr />
-        <section>
-          <h2>Get in Touch:</h2>
-          <article class="item">
-            <p class="flavor">Whatsapp</p><p class="price">+250 790663921</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Facebook</p><p class="price">Samuel Akingeneye</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Instagram</p><p class="price">Samuel Akingeneye</p>
-          </article>
-          <article class="item">
-            <p class="flavor">GitHub</p><p class="price">Samuel-AKINGENEYE</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Tiktok</p><p class="price">Fresh Talent</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Linkedin</p><p class="price">Samuel Akingeneye</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Twitter</p><p class="price">Samuel Akingeneye</p>
-          </article>
-          <article class="item">
-            <p class="flavor">HelloTalk</p><p class="price">Samuel Akingeneye</p>
-          </article>
-        </section>
-      </main>
-      <hr class="bottom-line" />
-      <footer>
-        <p>
-          <a href="index.html" target="_blank">Visit Our Website</a>
-        </p>
-        <p class="address">Fresh Talent Drive</p>
-      </footer>
-    </div>
+</head>
+<body>
 
-    <div class="fab" onclick="scrollToTop()">
-      <span>↑</span>
-    </div>
+    <section class="contact-section">
+        <div class="container">
+            <h2 class="section-title">Contact Me</h2>
+            <p class="contact-text">Let's connect! Reach out to me through any of the following platforms.</p>
 
-    <script>
-      function scrollToTop() {
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-      }
-    </script>
-  </body>
+            <div class="contact-links">
+                <a href="mailto:freshtalent491@gmail.com" class="contact-item">
+                    <i class="fas fa-envelope"></i> freshtalent491@gmail.com
+                </a>
+                <a href="https://linkedin.com/in/samuel-akingeneye-578b48331" class="contact-item">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://github.com/Samuel-AKINGENEYE" class="contact-item">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+                <a href="https://wa.me/0790663921" class="contact-item">
+                    <i class="fab fa-whatsapp"></i> WhatsApp
+                </a>
+                <a href="tel:+1234567890" class="contact-item">
+                    <i class="fas fa-phone"></i> +250 790663921
+                </a>
+            </div>
+
+            <!-- Contact Form -->
+            <div class="contact-form">
+                <h3>Send a Message</h3>
+                <form action="mailto:freshtalent491@gmail.com" method="post" enctype="text/plain">
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+</body>
 </html>
