--- a/services.html
+++ b/services.html
@@ -1,136 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Services - Fresh Talent in IT</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f5f7fa;
-      color: #333;
-    }
-    header {
-      background-color: #15382a;
-      color: white;
-      padding: 30px 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0 0 10px;
-    }
-    header p {
-      font-size: 1.2em;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .services-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .service-card {
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .service-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-    }
-    .service-card h3 {
-      margin-top: 0;
-      color: #4f46e5;
-    }
-    .cta {
-      text-align: center;
-      margin-top: 50px;
-    }
-    .cta button {
-      background: green;
-      color: white;
-      border: none;
-      padding: 12px 30px;
-      border-radius: 25px;
-      font-size: 1em;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .cta button:hover {
-      background: greenyellow;
-    }
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    .animate {
-      opacity: 0;
-      animation: fadeInUp 1s forwards;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Services</title>
+    <!-- FontAwesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #121212; /* Dark background */
+            color: #fff;
+            padding: 0;
+            margin: 0;
+        }
+
+        /* Services Section */
+        .services-section {
+            padding: 50px 20px;
+            background-color: #1a1a1a; /* Dark background for services */
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .section-title {
+            text-align: center;
+            font-size: 36px;
+            font-weight: bold;
+            color: #3ec799; /* Orange-red */
+            margin-bottom: 40px;
+        }
+
+        .services-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 30px;
+        }
+
+        /* Service Card */
+        .service-card {
+            background-color: #2c2c2c;
+            padding: 30px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .service-card:hover {
+            transform: translateY(-15px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        .service-icon {
+            font-size: 50px;
+            color: white; /* Orange-red */
+            margin-bottom: 20px;
+            transition: transform 0.3s ease;
+        }
+        .service-icon:hover {
+          color:orangered;
+        }
+
+        .service-card:hover .service-icon {
+            transform: rotate(10deg); /* Small rotation effect on hover */
+        }
+
+        .service-card h3 {
+            font-size: 24px;
+            color: #4CAF50; /* Dark green */
+            margin-bottom: 15px;
+            transition: color 0.3s ease;
+        }
+
+        .service-card p {
+            font-size: 16px;
+            color: #ddd;
+            margin-bottom: 20px;
+        }
+
+        .service-button {
+            background-color: green;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .service-button:hover {
+            background-color: orangered; 
+        }
+
+        /* Hover Effects */
+        .service-card:hover h3 {
+            color: #3ec799 ; /* Change to orange-red on hover */
+        }
+
+        .service-card:hover p {
+            color: #fff;
+        }
+
+        /* Media Queries */
+        @media (max-width: 768px) {
+            .section-title {
+                font-size: 28px;
+            }
+
+            .service-card h3 {
+                font-size: 22px;
+            }
+
+            .service-card p {
+                font-size: 14px;
+            }
+        }
+    </style>
 </head>
 <body>
+    <!-- Services Section -->
+    <section id="services" class="services-section">
+        <div class="container">
+            <h2 class="section-title">Services I Offer</h2>
+            <div class="services-container">
 
-  <header>
-    <h1>Services we offer</h1>
-    <p>Helping you turn ideas into real-world solutions with technology & passion.</p>
-  </header>
+                <!-- Web Design Service -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-paint-brush"></i> <!-- Web Design Icon -->
+                    </div>
+                    <h3>Web Design</h3>
+                    <p>Creating visually appealing, user-friendly websites that deliver seamless experiences.</p>
+                    <button class="service-button"><a href="contact.html">Contact me</a> </button>
+                </div>
 
-  <section id="services">
-    <div class="services-container">
-      <div class="service-card animate">
-        <h3>Web Development</h3>
-        <p>I build responsive and dynamic websites using HTML, CSS, JavaScript, and React. From personal portfolios to business websites, I craft solutions tailored to your needs.</p>
-      </div>
+                <!-- Mobile App Development Service -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-mobile-alt"></i> <!-- Mobile App Development Icon -->
+                    </div>
+                    <h3>Mobile App Development</h3>
+                    <p>Creating mobile apps that deliver seamless experiences on both iOS and Android.</p>
+                    <button class="service-button"><a href="contact.html">Contact me</a></button>
+                </div>
 
-      <div class="service-card animate">
-        <h3>Mobile App Development</h3>
-        <p>Creating mobile apps that solve problems related to environmental health, public awareness, and everyday convenience.</p>
-      </div>
+                <!-- Cybersecurity Services -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-shield-alt"></i> <!-- Cybersecurity Services Icon -->
+                    </div>
+                    <h3>Cybersecurity Services</h3>
+                    <p>Protecting your digital assets with robust security strategies and firewalls.</p>
+                    <button class="service-button"><a href="contact.html">Contact me</a></button>
+                </div>
 
-      <div class="service-card animate">
-        <h3>Cybersecurity Services</h3>
-        <p>Protect your software with strong firewalls, penetration testing, and modern cybersecurity best practices.</p>
-      </div>
+                <!-- Data Analysis & Visualization -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-chart-line"></i> <!-- Data Analysis Icon -->
+                    </div>
+                    <h3>Data Analysis & Visualization</h3>
+                    <p>Transforming data into actionable insights through advanced analytics and visualization tools.</p>
+                    <button class="service-button"><a href="contact.html">Contact me</a></button>
+                </div>
 
-      <div class="service-card animate">
-        <h3>Data Analysis & Visualization</h3>
-        <p>Using Python and SQL, I analyze data and create insightful visualizations for better decision-making and public health management.</p>
-      </div>
-
-      <div class="service-card animate">
-        <h3>Consulting & Tech Support</h3>
-        <p>Offering guidance on web development, cybersecurity, data analysis, and environmental health tech integration.</p>
-      </div>
-    </div>
-
-    <div class="cta">
-      <h2>Let’s Build Something Great Together!</h2>
-      <button onclick="window.location.href='contact.html'">Contact Me</button>
-    </div>
-  </section>
-
-  <script>
-    // Add scroll animation
-    window.addEventListener('scroll', () => {
-      document.querySelectorAll('.animate').forEach(el => {
-        const position = el.getBoundingClientRect().top;
-        const screenHeight = window.innerHeight;
-        if (position < screenHeight - 100) {
-          el.style.animationDelay = `${Math.random() * 0.5}s`;
-          el.classList.add('fade-in');
-          el.style.opacity = 1;
-        }
-      });
-    });
-  </script>
-
+                <!-- Consulting & Tech Support -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-cogs"></i> <!-- Consulting & Tech Support Icon -->
+                    </div>
+                    <h3>Consulting & Tech Support</h3>
+                    <p>Providing expert consulting and ongoing tech support for businesses and individuals.</p>
+                    <button class="service-button"><a href="contact.html">Contact me</a></button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
