--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background-color: #f4f4f4;
+            background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://img.freepik.com/free-photo/technology-digital-business-concept-ai-graphic-interface_53876-129703.jpg');
             color: #333;
             line-height: 1.6;
         }
@@ -46,9 +46,10 @@
             max-width: 1100px;
             margin: 40px auto;
             padding: 20px;
-            background: white;
+            background: rgb(31, 99, 82);
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            color: white;
         }
 
         .about-content {
@@ -71,12 +72,13 @@
         .about-text h2 {
             font-size: 2rem;
             margin-bottom: 10px;
-            color: #222;
+            color: white;
+            text-shadow: #333;
         }
 
         .about-text p {
             font-size: 1rem;
-            color: #444;
+            color: white;
             margin-bottom: 15px;
         }
 
