--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background-color: #8dada2;
+            background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://img.freepik.com/free-photo/technology-digital-business-concept-ai-graphic-interface_53876-129703.jpg');
             color: #333;
             font-size: 1rem;
             line-height: 1.6;
@@ -21,7 +21,7 @@
 
         /* Header */
         header {
-            background-color: #333;
+            background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://img.freepik.com/free-photo/technology-digital-business-concept-ai-graphic-interface_53876-129703.jpg');
             color: white;
             padding: 20px 0;
             text-align: center;
@@ -130,7 +130,6 @@
             <p>Explore my projects in web development, cybersecurity, and data analysis</p>
             <div class="cta-buttons">
                 <a href="portfolio.html">View my projects</a>
-                <a href="contact.html">Contact Me</a>
             </div>
         </div>
     </section>
