--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         /* Global Styles */
         body {
@@ -39,7 +40,7 @@
         }
 
         .project-card {
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(2, 2, 2, 1);
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
@@ -185,6 +186,13 @@
                 opacity: 1;
             }
         }
+
+        /* Icon Styles */
+        .project-card i {
+            font-size: 40px;
+            color: #8effb5;
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
@@ -192,73 +200,73 @@
     
     <section class="projects" id="portfolio">
         <div class="project-card" style="--order:1">
+            <i class="fas fa-cloud-sun"></i> <!-- Weather icon -->
             <h3>Weather App</h3>
-            <p>A web app that displays real-time weather updates based on the user's location or a search query.</p>
             <a href="weather_app.html">View Project</a>
         </div>
         <div class="project-card" style="--order:2">
+            <i class="fas fa-tint"></i> <!-- Water drop icon -->
             <h3>Water Testing App</h3>
-            <p>An app for monitoring water quality, helping users track essential water parameters for safety.</p>
             <a href="water_testing_app.html">View Project</a>
         </div>
         <div class="project-card" style="--order:3">
+            <i class="fas fa-laptop-code"></i> <!-- Code icon -->
             <h3>Dynamic Websites</h3>
-            <p>Custom websites that adapt dynamically, providing a tailored user experience through interactive elements.</p>
             <a href="#">View Project</a>
         </div>
         <div class="project-card" style="--order:4">
+            <i class="fas fa-user-tie"></i> <!-- Portfolio icon -->
             <h3>Personal Portfolio Webpage</h3>
-            <p>A showcase of my web development work and projects, designed to highlight my skills and achievements.</p>
             <a href="index.html">View Project</a>
         </div>
         <div class="project-card" style="--order:5">
+            <i class="fas fa-book-open"></i> <!-- Documentation icon -->
             <h3>Technical Documentation Page</h3>
-            <p>A documentation page that provides clear and organized instructions for using software or tools effectively.</p>
             <a href="technical_documentation_page.html">View Project</a>
         </div>
         <div class="project-card" style="--order:6">
+            <i class="fas fa-edit"></i> <!-- Form icon -->
             <h3>Survey Form</h3>
-            <p>A form to collect user responses, designed with best practices in form validation and user input.</p>
             <a href="survey_form.html">View Project</a>
         </div>
         <div class="project-card" style="--order:7">
+            <i class="fas fa-question-circle"></i> <!-- Quiz icon -->
             <h3>Quiz App</h3>
-            <p>An interactive quiz app to challenge users with trivia questions and provide instant feedback.</p>
             <a href="quiz.app.html">View Project</a>
         </div>
         <div class="project-card" style="--order:8">
+            <i class="fas fa-tasks"></i> <!-- Task list icon -->
             <h3>To Do List</h3>
-            <p>A simple task manager that allows users to add, mark, and delete tasks in an intuitive interface.</p>
             <a href="to_do_list.html">View Project</a>
         </div>
         <div class="project-card" style="--order:9">
+            <i class="fas fa-box"></i> <!-- Box icon -->
             <h3>Product Landing Page</h3>
-            <p>A responsive page designed to market a product, featuring call-to-action buttons and product details.</p>
             <a href="product_landing_page.html">View Project</a>
         </div>
         <div class="project-card" style="--order:10">
+            <i class="fas fa-calculator"></i> <!-- Calculator icon -->
             <h3>Javascript Calculator</h3>
-            <p>A functional calculator built with JavaScript, handling basic arithmetic operations for user convenience.</p>
             <a href="javascript_calculator.html">View Project</a>
         </div>
         <div class="project-card" style="--order:11">
+            <i class="fas fa-clock"></i> <!-- Clock icon -->
             <h3>Pomodoro Clock</h3>
-            <p>A time management tool based on the Pomodoro technique, designed to increase productivity and focus.</p>
             <a href="pomodoro_clock.html">View Project</a>
         </div>
         <div class="project-card" style="--order:12">
+            <i class="fas fa-quote-left"></i> <!-- Quote icon -->
             <h3>Quote Generator</h3>
-            <p>A random quote generator that displays a new inspirational quote with each click or refresh.</p>
             <a href="quote_generator.html">View Project</a>
         </div>
         <div class="project-card" style="--order:13">
+            <i class="fas fa-store"></i> <!-- Store icon -->
             <h3>E-commerce Website</h3>
-            <p>A fully functional online store, featuring product listings, shopping cart, and checkout functionalities.</p>
             <a href="e_commerce_website.html">View Project</a>
         </div>
         <div class="project-card" style="--order:14">
+            <i class="fas fa-briefcase"></i> <!-- Job Board icon -->
             <h3>Job Board Application</h3>
-            <p>A job listing app where employers can post vacancies and users can search for job opportunities.</p>
             <a href="job_board_application.html">View Project</a>
         </div>
     </section>
