--- a/resume.html
+++ b/resume.html
@@ -5,295 +5,215 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(to right, #e0f7fa, #f4f4f9);
-            color: #333;
-            padding: 20px;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 30px 0;
-            text-align: center;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            margin-bottom: 30px;
-            animation: fadeIn 2s ease-in-out;
-        }
-
-        header h1 {
-            font-size: 3rem;
-            margin-bottom: 10px;
-        }
-
-        header p {
-            font-size: 1.2rem;
-            margin: 5px 0;
-        }
-
-        header a {
-            color: #00aaff;
-            text-decoration: none;
-            transition: all 0.3s;
-        }
-
-        header a:hover {
-            color: #00ffdd;
-            text-shadow: 0 0 10px #00ffdd;
-        }
-
-        fieldset {
-            border: 2px solid #333;
-            border-radius: 10px;
-            padding: 20px;
-            margin-bottom: 25px;
-            background-color: #fff;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-            opacity: 1;
-            transform: translateY(0);
-            animation: fadeIn 1.5s ease forwards;
-        }
-
-        legend {
-            font-size: 1.6rem;
-            font-weight: bold;
-            color: #333;
-            padding: 0 10px;
-        }
-
-        p, li {
-            font-size: 1.1rem;
-            margin-bottom: 10px;
-        }
-
-        ul {
-            list-style-type: square;
-            padding-left: 25px;
-        }
-
-        ul li a {
-            color: #00aaff;
-            text-decoration: none;
-            transition: all 0.3s;
-        }
-
-        ul li a:hover {
-            color: #ff00aa;
-            text-shadow: 0 0 8px #ff00aa;
-        }
-
-        #scrollTopBtn {
-            position: fixed;
-            bottom: 30px;
-            right: 30px;
-            background-color: #00aaff;
-            color: #fff;
-            border: none;
-            padding: 15px;
-            border-radius: 50%;
-            cursor: pointer;
-            box-shadow: 0 0 15px rgba(0, 170, 255, 0.5);
-            transition: all 0.3s;
-            animation: bounce 2s infinite;
-        }
-
-        #scrollTopBtn:hover {
-            background-color: #00ffdd;
-            box-shadow: 0 0 20px rgba(0, 255, 221, 0.7);
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
-            40% { transform: translateY(-10px); }
-            60% { transform: translateY(-5px); }
-        }
-
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2.2rem;
-            }
-
-            legend {
-                font-size: 1.3rem;
-            }
-        }
-
-        #certificates {
-  padding: 40px 20px;
-  background-color: #f4f4f4;
-  text-align: center;
+        /* Global Styles */
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f5f5f5;
+    color: #333;
+}
+header {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 30px 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+header h1 {
+    margin: 0;
+    font-size: 3em;
+    letter-spacing: 1px;
 }
 
-#certificates h2 {
-  font-size: 2rem;
-  color: #333;
-  margin-bottom: 20px;
+.container {
+    max-width: 1200px;
+    margin: 40px auto;
+    padding: 30px;
+    background-color: white;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
-.certificate {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  padding: 20px;
-  margin: 15px 0;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+/* Section Styles */
+.resume-section {
+    margin-bottom: 40px;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: #24685f;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.certificate:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+.certificate-section {
+    margin-bottom: 40px;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: rgba(255, 127, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.certificate h3 {
-  font-size: 1.5rem;
-  color: #007bff;
-  margin-bottom: 10px;
+/* Center text and align anchor elements */
+.resume-section h2  {
+    font-size: 2.5em;
+    color: white;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
-.certificate a {
-  display: inline-block;
-  font-size: 1.1rem;
-  color: #007bff;
-  text-decoration: none;
-  padding: 10px 20px;
-  border: 2px solid #007bff;
-  border-radius: 5px;
-  transition: background-color 0.3s, color 0.3s;
+.certificate-section h2 {
+    font-size: 2.5em;
+    color: rgb(24, 92, 64);
+    margin-bottom: 20px;
+    text-align: center;
 }
 
-.certificate a:hover {
-  background-color: #007bff;
-  color: #fff;
+.resume-section p, .certificate-section p {
+    font-size: 1.2em;
+    color: white;
+    margin-bottom: 20px;
+    text-align: center;
+    font-weight: bold;
 }
 
+.resume-section, .certificate-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+/* Style for the anchor buttons */
+.resume-section .resume, .certificate-list a {
+    display: inline-block;
+    text-align: center;
+    padding: 10px 20px;
+    font-size: 1.1em;
+    background-color: #007bff;
+    color: white;
+    border-radius: 8px;
+    text-decoration: none;
+    margin: 10px auto;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    width: auto;  /* Keeps the button compact */
+}
+
+.resume-section .resume:hover, .certificate-list a:hover {
+    background-color: #0056b3;
+    transform: translateY(-5px);  /* Adds a floating effect on hover */
+}
+
+.certificate-list {
+    margin-top: 20px;
+    list-style: none;
+    padding: 0;
+}
+
+.certificate-list a {
+    background-color: #28a745;
+    font-size: 1.1em;
+    color: white;
+    border-radius: 8px;
+    padding: 12px 25px;
+    margin: 10px auto;
+    display: block;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    width: auto;  /* Ensures buttons are not full width */
+}
+
+.certificate-list a:hover {
+    background-color: #218838;
+    transform: translateY(-5px);  /* Adds a floating effect on hover */
+}
+
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+    .resume-section, .certificate-section {
+        margin-bottom: 20px;
+        padding: 15px;
+    }
+
+    header h1 {
+        font-size: 2em;
+    }
+
+    .container {
+        padding: 20px;
+    }
+
+    .resume-section h2, .certificate-section h2 {
+        font-size: 2em;
+    }
+
+    .resume-section .resume, .certificate-list a {
+        font-size: 1em;
+        padding: 12px 20px;
+    }
+}
+
+        
     </style>
 </head>
 <body>
+
     <header>
         <h1>Samuel AKINGENEYE</h1>
-        <p id="typewriter"></p>
-        <p>Email: <a href="mailto:freshtalent491@gmail.com">freshtalent491@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/samuel-akingeneye-578b48331" target="_blank">LinkedIn</a> | GitHub: <a href="https://github.com/Samuel-AKINGENEYE" target="_blank">GitHub</a></p>
+        <p>Full-Stack Web Developer | Cybersecurity Enthusiast | Data Analyst | Environmental Health Scientist</p>
     </header>
 
-    <fieldset>
-        <legend>Professional Summary</legend>
-        <p>A passionate and self-driven full-stack web developer with a strong background in environmental health sciences. I specialize in creating responsive web applications and software solutions that address real-world problems. Currently learning full-stack development and expanding my skills in web technologies, cybersecurity, and data analysis. Eager to contribute my expertise to impactful projects, internships, or freelance opportunities.</p>
-    </fieldset>
+    <div class="container">
+        <!-- Tech Skills Resume Section -->
+        <section class="resume-section" id="tech-resume">
+            <h2>Tech Skills Resume</h2>
+            <p>Click below to download my tech resume.</p>
+            <a href="Samuel_AKINGENEYE_Tech_Resume.pdf" class="resume">Download</a>
+        </section>
 
-    <fieldset>
-        <legend>Skills</legend>
-        <ul>
-            <li><strong>Web Development:</strong> HTML, CSS, JavaScript, React, Responsive Web Design</li>
-            <li><strong>Cybersecurity:</strong> Firewalls, Penetration Testing</li>
-            <li><strong>Data Analysis:</strong> Python, SQL</li>
-            <li><strong>Other Technologies:</strong> Git, Node.js, Express, MongoDB, RESTful APIs</li>
-        </ul>
-    </fieldset>
+        <!-- Environmental Health Skills Resume Section -->
+        <section class="resume-section" id="health-resume">
+            <h2>Environmental Health Skills Resume</h2>
+            <p>Click below to download my environmental health skills resume.</p>
+            <a href="Samuel_AKINGENEYE_Environmental_Health_Resume.pdf" class="resume">Download</a>
+        </section>
 
-    <fieldset>
-        <legend>Certifications</legend>
-        <ul>
-            <li>Responsive Web Design – FreeCodeCamp</li>
-            <li>JavaScript Algorithms and Data Structures – FreeCodeCamp</li>
-            <li>Computer Fundamentals</li>
-            <li>Outbreak investigations in health facilities - W.H.O</li>
-        </ul>
-    </fieldset>
+        <!-- Web Development Certificates Section -->
+        <section class="certificate-section" id="web-development-certificates">
+            <h2>Web Development Certificates</h2>
+            <div class="certificate-list">
+                <a href="Responsive Web Design.pdf">Certificate 1 - Responsive Web Design</a>
+                <a href="Javascript Algorithm and Data Structures.pdf">Certificate 2 - JavaScript Algorithms and Data Structures</a>
+            </div>
+        </section>
 
-    <section id="certificates">
-        <h2>Certificates</h2>
-        <div class="certificate">
-          <h3>Responsive Web Design - FreeCodeCamp</h3>
-          <a href="Responsive Web Design.pdf">
-            View/Download Certificate
-          </a>
-        </div>
-        <div class="certificate">
-          <h3>JavaScript - FreeCodeCamp</h3>
-          <a href="Javascript Algorithm and Data Structures.pdf">
-            View/Download Certificate
-          </a>
-        </div>
-        <div class="certificate">
-          <h3>Computer Fundamentals - Certificate</h3>
-          <a href="Computer foundamentals.pdf">
-            View/Download Certificate
-          </a>
-        </div>
-        <div class="certificate">
-            <h3>W.H.O - Certificate</h3>
-            <a href="W.H.O Certificate.pdf">
-              View/Download Certificate
-            </a>
-          </div>
-        <!-- Add more certificates as needed -->
-      </section>
-      
+        <!-- Cybersecurity Certificates Section -->
+        <section class="certificate-section" id="cybersecurity-certificates">
+            <h2>Cybersecurity Certificates</h2>
+            <div class="certificate-list">
+                <a href="cybersecurity_certificate_1.pdf" target="_blank">Certificate 1 - Cybersecurity Basics</a>
+                <a href="cybersecurity_certificate_2.pdf" target="_blank">Certificate 2 - Ethical Hacking</a>
+            </div>
+        </section>
 
+        <!-- Data Analysis Certificates Section -->
+        <section class="certificate-section" id="data-analysis-certificates">
+            <h2>Data Analysis Certificates</h2>
+            <div class="certificate-list">
+                <a href="data_analysis_certificate_1.pdf" target="_blank">Certificate 1 - Python for Data Analysis</a>
+                <a href="data_analysis_certificate_2.pdf" target="_blank">Certificate 2 - SQL for Data Analysis</a>
+            </div>
+        </section>
 
-    <fieldset>
-        <legend>Education</legend>
-        <p><strong>Bachelor of Science (Honours) in Environmental Health Sciences</strong><br>
-        University of Rwanda <br>
-        Level 2 Expected graduation is 2027<br>
-        Currently learning full-stack web development on FreeCodeCamp.org.</p>
-    </fieldset>
+        <!-- Environmental Health Certificates Section -->
+        <section class="certificate-section" id="environmental-health-certificates">
+            <h2>Environmental Health Sciences Certificates</h2>
+            <div class="certificate-list">
+                <a href="">Certificate 1 - Environmental Health Fundamentals</a>
+                <a href="W.H.O Certificate.pdf">Certificate 2 - Outbreak investigations in health facilities</a>
+                <a href="env_health_certificate_2.pdf">Certificate 3 - Food Safety and Hygiene</a>
+            </div>
+        </section>
 
-    <fieldset>
-        <legend>Projects</legend>
-        <ul>
-            <li><strong>Dynamic Weather App</strong> — Displays live weather data and forecasts. <a href="weather_app.html">View Project</a></li>
-            <li><strong>Real-Time Water Testing App</strong> — Monitors and visualizes water quality data. <a href="water_testing_app.html" >View Project</a></li>
-            <li><strong>Portfolio Website</strong> — Personal website showcasing my work. <a href="index.html">Visit Site</a></li>
-        </ul>
-    </fieldset>
+    </div>
 
-    <fieldset>
-        <legend>Languages</legend>
-        <ul>
-            <li>Kinyarwanda (Native)</li>
-            <li>English (Fluent)</li>
-            <li>French (Basic)</li>
-        </ul>
-    </fieldset>
-
-    <fieldset>
-        <legend>Volunteer & Extracurricular Activities</legend>
-        <p>Open to participating in volunteer opportunities related to web development, cybersecurity, or environmental health.</p>
-    </fieldset>
-
-    <button onclick="scrollToTop()" id="scrollTopBtn" title="Go to top">⬆️</button>
-
-    <script>
-        const text = "Full-Stack Web Developer | Cybersecurity Enthusiast | Environmental Health Scientist";
-        let i = 0;
-        function typeWriter() {
-            if (i < text.length) {
-                document.getElementById("typewriter").innerHTML += text.charAt(i);
-                i++;
-                setTimeout(typeWriter, 60);
-            }
-        }
-        typeWriter();
-
-        function scrollToTop() {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        }
-    </script>
 </body>
 </html>
