--- a/services.html
+++ b/services.html
@@ -91,8 +91,10 @@
 
         .service-button {
             background-color: green;
-            color: #fff;
+            color: white;
+            font-weight: bold;
             padding: 10px 20px;
+            text-decoration: none;
             border: none;
             border-radius: 5px;
             cursor: pointer;
